src/css/styles.css
/* ... */
.splide__slide img {
  max-height: 80vh;
}

@media (min-width: 769px) {

  h1 {
    font-size: 4.76rem;
  }

  /* 
h2{
  font-size: 3.81rem;
}

h3{
  font-size: 3.05rem;
}

h4{
  font-size: 2.44rem;
}

h5{
  font-size: 1.95rem;
}

h5{
  font-size: 1.56rem;
} */

  .splide__arrows {
    visibility: visible;
  }

  .splide__slide {
    padding: 0 3rem;
  }

  .card-info {
    max-width: 70%;
    margin: auto;
  }

  .about-whole-section {
    width: 100%;
    display: flex;
    flex-direction: row;
  }

  .about-half-section:first-child {
    margin-right: 10px;
  }

  .about-half-section {
    width: 50%;
  }

  .skills-practices {
    width: 100%;
  }

  #skills {
    margin-right: 10px;
  }

  .p-statement em {
    padding: 4px 10px !important;
    border-radius: 5px;
  }

  .problem-statement {
    padding: 4em;
  }

  .gradient-line {
    margin-right: 20px;
  }

}

.demo img {
  min-width: 300px;
  padding: 0 5px 10px 0;
}



.sketch-and-cap {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.sketch-chunk img {
  flex: 1;
  min-width: 200px;
  max-width: 500px;
  justify-content: center;
  margin: inherit !important;
}

.sketch-chunk .sketch-info {
  max-width: 500px;
  flex: 1;
  align-items: center;
  justify-content: center;
  min-width: 200px;
  margin-right: 2rem;
}

.sketch-info {
  align-content: center;
}

.project-img {
  max-width: 400px;
}

.vid-series {
  width: 33.33%;
}


/*
 CARD / SECTION STYLING
 */

.content {}

#footer {
  width: 100%;
  padding-top: 2rem;
}

.under-construction {
  display: flex;
  flex-flow: row nowrap;
  background-color: var(--lemon);
  padding: 20px;
  align-items: center;
  justify-content: space-between;
  animation: slidein .4s ease .2s 1 normal both running;
}

.uc-section {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.under-construction h5,
.under-construction .caption,
.under-construction i {
  color: var(--dark);
  display: flex;
}

.under-construction i {
  padding-right: 10px;
}

.carousel {
  display: flex;
  flex-flow: row;
  overflow-x: auto;
  overflow-y: hidden;
  margin-bottom: 2rem;
}

.carousel img {
  width: 45vh;
  max-width: 80vh;
  margin-left: 1rem;
}

#books .carousel-card img {
  max-height: 95%;
}

.small-carousel {
  display: flex;
  flex-flow: row;
  overflow-x: auto;
  overflow-y: hidden;
  width: 100%;
  background-color: var(--darker);
}

.small-carousel img {
  max-height: 100%;
  max-width: 100%;
  margin: auto;
  display: flex;
  justify-content: center;
  align-content: center;
  border-radius: .25rem;
}

.carousel-img-container {
  height: 170px;
  display: flex;
}


.carousel-card-text p {
  color: var(--light);
}

.info-card {
  background-color: var(--darker);
  border-radius: 10px;
  padding: 15px;
  margin: 10px 0;
}

.splide li {
  display: flex;
}

.splide .info-card {
  display: flex;
  flex-direction: column;
  align-content: center;
}

.card-info {
  margin-top: 1em;
}

.animation-page .info-card img,
.animation-page .info-card video {
  max-height: 80vh;
  margin: auto;
}

.card-item {
  margin: 20px 0;
}

.cardless-item {
  margin: 0 15px 30px;
}

.cardless-item:last-of-type {
  margin-bottom: 0;
}

.project-context {
  display: flex;
  flex-flow: row wrap;
}

.project-context .cardless-item {
  flex: 1;
  min-width: 200px;
}

.persona-context {
  margin-right: 5px;
}

.persona-card {
  background-color: var(--dark);
  border-radius: 10px;
  padding: 1rem;
}

.featured-flair {
  padding: 1rem;
  display: flex;
  flex-flow: row nowrap;
  justify-content: flex-end;
  color: var(--light);
}

.not-found {
  display: flex;
  flex-flow: column wrap;
  width: 100%;
  padding: 2rem;
  padding-bottom: 0;
  justify-content: center;
}

#contact {
  display: none;
}

.contact-cta {
  flex-grow: 1;
}

.contact-buttons {
  flex-grow: 1;
}

.gradient-line {
  padding: 0px 1.7px;
  margin: 5px 0;
  margin-right: 10px;
  border-radius: 10px;
}

.s-l {
  background-image: linear-gradient(var(--sky), var(--lemon));
}

.l-p {
  background-image: linear-gradient(var(--lemon), var(--peach));
}

.p-s {
  background-image: linear-gradient(var(--peach), var(--sky));
}

.title-with-button{
  display:flex;
  justify-content:space-between;
}

.go-to-site-button-container{
justify-content: right;
float: right;
}



/*
 LIST STYLING
 */

.info-card ul {
  list-style-type: disc;
}

li {
  margin: 8px 0;
}

ul {
  padding: 0 15px;
}

.bulleted-list{
  list-style-type: circle;  
}

.chunked-list {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}

.list-chunk {
  margin-top: 10px;
  flex: 1;
  min-width: 300px;
}

.tinylist {
  columns: 130px 2;
  align-content: top;
  margin-top: 0px;
}

.resume .list-chunk {
  margin-top: 20px;
}

/* 
SECTION HEADERS
*/

.section-header {
  margin-bottom: 10px;
}

.heather-intro {
  display: flex;
  flex-flow: column wrap;
  align-self: center;
  justify-content: center;
}

.heather-attributes {
  padding-bottom: 10px;
}

.intro-subhead {
  margin-bottom: 30px;
}

.section-line {
  width: 30px;
  height: 3px;
}

hr {
  width: 40px;
  border-radius: 5px;
  border: 2px solid;
  margin: 60px 0 20px 0;
}

.cardless-item h5,
.info-card h5 {
  padding: 10px 0;
}

/*
 COLOR-BLOCK STYLING
 */

.peach li::marker,
.peach .caption,
.peach h1,
.peach h2,
.peach h3,
.peach h4,
.peach h5,
.peach span {
  color: var(--peach);
}

p.peach::selection {
  background: var(--peach);
}

p.peach::-moz-selection {
  background: var(--peach);
}

.peach hr {
  background-color: var(--peach);
  border-color: var(--peach);
}

.sky li::marker,
.sky .caption,
.sky h1,
.sky h2,
.sky h3,
.sky h4,
.sky h5,
.sky span .sky i[class^="ph"] {
  color: var(--sky);
}

p.sky::selection {
  background: var(--sky);
}

p.sky::-moz-selection {
  background: var(--sky);
}

.sky hr {
  background-color: var(--sky);
  border-color: var(--sky);
}
/* ... */

